--- a/src/main/resources/template/JpaEntity.vm
+++ b/src/main/resources/template/JpaEntity.vm
@@ -43,8 +43,8 @@ import $importClass;
 #end
 #if($tablesConfig.isUseClassComment() && !$table.getTableComment().isEmpty())
 /**
+* $table.getTableComment()
 * @author $author
-* @Description $table.getTableComment()
 * @date $date
 */
 #end
